added snackbar data

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,32 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="green">#00A851</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="redCardBackground">#FF6C64</color>
+    <color name="bottom_active">#26FEBF08</color>
+    <color name="fill_solid">#A8A8A8</color>
+    <color name="primaryColor">#FF0000</color>
+    <color name="primaryColorInactive">#EEB8B8</color>
+    <color name="text_h1">#00195C</color>
+    <color name="text_h2">#505460</color>
+    <color name="text_h3">#AAB2BF</color>
+    <color name="text_h4">#474A54</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="search_color">#C4C4C4</color>
+    <color name="share_background">#3383C4</color>
+    <color name="bg_whatsapp">#00E676</color>
+    <color name="bg_all">#9CB6F9</color>
+    <color name="bg_all_selected">#5481F5</color>
+    <color name="bg_meme">#CCC2FB</color>
+    <color name="bg_meme_selected">#907AF6</color>
+    <color name="bg_gif">#FAE0A8</color>
+    <color name="bg_gif_selected">#F6C660</color>
+    <color name="bg_audio">#EEB8B8</color>
+    <color name="bg_audio_selected">#DF7A7A</color>
 </resources>
